--- a/src/index.scss
+++ b/src/index.scss
@@ -28,5 +28,11 @@ $azulMenosEscuro: #4565B7;
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
+    
+  }
+
+  body {
+    background-image: url("/src/assets/images/background3.jpg");
+    background-size: cover;
   }
   
