--- a/src/routes/Regioes.scss
+++ b/src/routes/Regioes.scss
@@ -180,14 +180,20 @@
 
         .starter-icon1 {
             background-image: url("../assets/pokesprite-master/pokesprite-master/pokemon-gen8/regular/grookey.png");
+            scale: 1.5;
+            margin-top: -40px;
         }
 
         .starter-icon2 {
             background-image: url("../assets/pokesprite-master/pokesprite-master/pokemon-gen8/regular/scorbunny.png");
+            scale: 1.5;
+            margin-top: -40px;
         }
 
         .starter-icon3 {
             background-image: url("../assets/pokesprite-master/pokesprite-master/pokemon-gen8/regular/sobble.png");
+            scale: 1.5;
+            margin-top: -40px;
         }
     }
     
