--- a/src/routes/Pokedex.css
+++ b/src/routes/Pokedex.css
@@ -78,6 +78,7 @@ main #base-filtro .filtro {
   justify-content: space-around;
   align-items: center;
   font-size: 12px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=Pokedex.css.map */
