--- a/src/routes/Pokedex.scss
+++ b/src/routes/Pokedex.scss
@@ -91,6 +91,7 @@ main{
             justify-content: space-around;
             align-items: center;
             font-size: 12px;
+            cursor: pointer;
 
         }
     }
