--- a/src/routes/Pokedex.scss
+++ b/src/routes/Pokedex.scss
@@ -77,7 +77,7 @@ main{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        margin-bottom: 30px;
+
 
         .filtro {
 
@@ -99,7 +99,10 @@ main{
 
 
 
-    
+    #recomendacao {
+        font-size: 9px;
+        margin-bottom: 30px;
+    }
 
 
 }
