--- a/src/components/BadgeTipo.scss
+++ b/src/components/BadgeTipo.scss
@@ -1,15 +1,15 @@
 .badge-tipo0,.badge-tipo1,.badge-tipo2,.badge-tipo3,.badge-tipo4,.badge-tipo5,.badge-tipo6,.badge-tipo7,.badge-tipo8,.badge-tipo9,.badge-tipo10,.badge-tipo11,.badge-tipo12,.badge-tipo13,.badge-tipo14,.badge-tipo15,.badge-tipo16,.badge-tipo17 {
- width: 75px;
+ width: 70px;
  height: 30px;
  border-radius: 25px;
  display: flex;
  justify-content: space-between;
  align-items: center;
- margin-right: 5px;
+ margin-right: 3px;
 
     .fundo-branco-badge {
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
         background-color: white;
         border-radius: 50%;
         display: flex;
@@ -18,19 +18,20 @@
         margin-left: 5px;
 
         .tipo0,.tipo1, .tipo2,.tipo3,.tipo4,.tipo5,.tipo6,.tipo7,.tipo8,.tipo9,.tipo10,.tipo11,.tipo12,.tipo13,.tipo14,.tipo15,.tipo16,.tipo17 {
-            width: 12px;
-            height: 14px;
-            background-size: cover;
-
+            width: 17px;
+            height: 17px;
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
             border-radius: 50%;
         }
     }
 
 
     span{
-        font-size: 9px;
+        font-size: 7px;
         margin: 0;
         color: white;
-        padding-right: 10px;
+        padding-right: 6px;
     }
 }
