--- a/src/components/PokemonCard.css
+++ b/src/components/PokemonCard.css
@@ -5,6 +5,7 @@
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 20px;
+  box-shadow: 2px 2px 5px #5b5b5b;
 }
 .pokemon-card .info-card {
   text-decoration: none;
@@ -34,9 +35,18 @@
   width: 40%;
   border-radius: 15px;
 }
-.pokemon-card .pokemon-img img {
+.pokemon-card .pokemon-img .pokemon-tipo-vetor {
   width: 100%;
   height: 100%;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: center;
+}
+.pokemon-card .pokemon-img .pokemon-tipo-vetor .sprite {
+  width: 100%;
+  height: 100%;
+  margin-top: -30px;
+  scale: 1;
 }
 
 /*# sourceMappingURL=PokemonCard.css.map */
