--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 #app {
+  background-size: cover;
   padding: 40px;
   height: 100%;
   width: 100%;
 }
 
 #pikachu-stalker {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   background-size: cover;
   background-image: url("./assets/images/pikastalker.png");
   position: absolute;
