--- a/src/components/PokemonCard.scss
+++ b/src/components/PokemonCard.scss
@@ -51,6 +51,7 @@
             background-repeat: no-repeat;
             background-size: 50%;
             background-position: center;
+            
 
 
 
@@ -59,6 +60,7 @@
                 width: 100%;
                 height: 100%;
                 margin-top: -30px;
+                margin-bottom: 30px;
                 scale: 1;
 
                     
