--- a/src/routes/Pokedex.scss
+++ b/src/routes/Pokedex.scss
@@ -1,10 +1,12 @@
 @use '../index.scss' as *;
+@use '../components/SelecaoDeOrdem.scss' as *;
 
 #root {
     height: 100%;
 }
 
-main{
+main#pokedex{
+    position: relative;
 
     ul {
         padding: 0;
@@ -98,6 +100,8 @@ main{
             cursor: pointer;
 
         }
+
+        @include corDosBotoes;
     }
 
 
